--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -7,7 +7,7 @@ title: Title
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{{title}} - Nicolas Gay</title>
+        <title>{{title}} - robiiiiiiiiiiiin</title>
         <link rel="stylesheet" href="/bundle.css">
         <meta name="description" content="{{ general.description }}">
 
@@ -15,17 +15,17 @@ title: Title
         <link rel="icon" type="image/svg+xml" href="/_public/favicon.svg" />
         <link rel="shortcut icon" href="/_public/favicon.ico" />
         <link rel="apple-touch-icon" sizes="180x180" href="/_public/apple-touch-icon.png" />
-        <meta name="apple-mobile-web-app-title" content="Nicolas Gay" />
+        <meta name="apple-mobile-web-app-title" content="robiiiiiiiiiiiin" />
         <link rel="manifest" href="/_public/site.webmanifest" />
 
-        <meta property="og:title" content="Nicolas Gay">
+        <meta property="og:title" content="robiiiiiiiiiiiin">
         <meta property="og:description" content="{{ general.description }}">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://nicolasgay.ch/_public/NicolasGay_opengraph.jpg">
         <meta property="og:image:width" content="1200">
         <meta property="og:image:height" content="630">
         <meta property="og:image:type" content="image/jpeg">
-        <meta name="twitter:title" content="Nicolas Gay">
+        <meta name="twitter:title" content="robiiiiiiiiiiiin">
         <meta name="twitter:description" content="{{ general.description }}">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:image" content="https://nicolasgay.ch/_public/NicolasGay_opengraph.jpg">
