--- a/src/index.njk
+++ b/src/index.njk
@@ -18,6 +18,9 @@ title: Homepage
         {% box_1 %}
         <a href="/acab">ⒶCⒶB/</a>
         {% endbox_1 %}
+        {% box_1 %}
+        <a href="/geodetective">Geodetective/</a>
+        {% endbox_1 %}
     </div>
 </div>
 
