--- a/src/acab/acab.njk
+++ b/src/acab/acab.njk
@@ -12,6 +12,7 @@ title: ⒶCⒶB
         {% box_1 "révolte" %}
         <div class="flex flex-col gap-2">
             <a href="https://infokiosques.net/insurrections" target="_blank" rel="noopener noreferrer">En vrac...</a>
+            <a href="https://infokiosques.net/spip.php?article2099" target="_blank" rel="noopener noreferrer">Se protéger des armes de police quelques bases de survie</a>
         </div>
         {% endbox_1 %}
 
