--- a/src/_includes/layout_contentPage.njk
+++ b/src/_includes/layout_contentPage.njk
@@ -31,7 +31,7 @@ title: Title
         <meta name="twitter:image" content="https://nicolasgay.ch/_public/NicolasGay_opengraph.jpg">
     </head>
 
-    <body class="relative bg-black py-15 px-3 font-body text-white leading-[1.3]">
+    <body class="relative bg-black py-15 px-3 md:px-6 font-body text-white leading-[1.3]">
         <div class="fixed top-0 left-0 w-full h-full bg-[url(/_public/img/background_stars.jpg)] bg-repeat bg-size-[300px]"></div>
 
         <div class="relative max-w-[1400px] mx-auto">
