--- a/src/index.njk
+++ b/src/index.njk
@@ -28,6 +28,9 @@ title: Homepage
         {% box_1 %}
         <a href="/pics">pics/</a>
         {% endbox_1 %}
+        {% box_1 %}
+        <a href="/have-you-been-to-the-mystery-park">Have you been to the mystery park ?</a>
+        {% endbox_1 %}
     </div>
 </div>
 
