--- a/src/have-you-been-to-the-mystery-park/have-you-been-to-the-mystery-park.njk
+++ b/src/have-you-been-to-the-mystery-park/have-you-been-to-the-mystery-park.njk
@@ -137,6 +137,36 @@ title: Have you been to the Mystery Park ?
         {% endbox_1 %}
     </div>
 
+    {# *********************************************************** MEGASTONES ************************************************************ #}
+
+    <div class="flex flex-col">
+        {# PAVILION 4 - MEGASTONES #}
+        {% box_1 "Pavilion 4 - Megastones" %}
+        {% renderFile "src/have-you-been-to-the-mystery-park/MegaStones_A_time_machine_of_the_high_priests.md" %}
+        {% endbox_1 %}
+        {% box_1 "Brochures", "", "!text-[0.75rem]" %}
+        <a href="/_public/docs/mysterypark_megastones_en.pdf" target="_blank">mysterypark_megastones_en.pdf</a><br>
+        <a href="/_public/docs/mysterypark_megastones_fr.pdf" target="_blank">mysterypark_megastones_fr.pdf</a><br>
+        <a href="/_public/docs/mysterypark_megastones_de.pdf" target="_blank">mysterypark_megastones_de.pdf</a>
+        {% endbox_1 %}
+    </div>
+
+    {# VIDEO #}
+    <div class="flex flex-col h-full justify-end gap-4">
+        <figure>
+            <video controls>
+                <source src="/_public/video/Mystery-Park-Lasershow-2.mp4" type="video/mp4">
+            </video>
+            <figcaption class="text-sm leading-[1.2]">A sneak peek recorded by a visitor of the Stonehenge laser show at the Mystery Park</figcaption>
+        </figure>
+        {% box_1 "" %}
+        <p>You can find other videos of the laser show here</p>
+        <p>Mystery Park - Lasershow 1 [<a href="https://www.youtube.com/watch?v=i6CrBStxpZs" target="_blank" class="">YouTube</a>] [<a href="/_public/video/Mystery-Park-Lasershow-1.mp4" target="_blank" class="">mp4</a>]
+        Mystery Park - Lasershow 2 [<a href="https://www.youtube.com/watch?v=a33gmuW6aW0" target="_blank" class="">YouTube</a>] [<a href="/_public/video/Mystery-Park-Lasershow-2.mp4" target="_blank" class="">mp4</a>]
+        Mystery Park - Lasershow 3 [<a href="https://www.youtube.com/watch?v=6hxUyl_TmBA" target="_blank" class="">YouTube</a>] [<a href="/_public/video/Mystery-Park-Lasershow-3.mp4" target="_blank" class="">mp4</a>]</p>
+        {% endbox_1 %}
+    </div>
+
 </div>
 
 {# <img src="/_public/img/mysterypark_gif_2005.gif" alt="Random Mystery Park gif featured on their old website"> #}
