--- a/src/have-you-been-to-the-mystery-park/have-you-been-to-the-mystery-park.njk
+++ b/src/have-you-been-to-the-mystery-park/have-you-been-to-the-mystery-park.njk
@@ -93,7 +93,6 @@ title: Have you been to the Mystery Park ?
         {% endbox_1 %}
     </div>
 
-
     {# *********************************************************** ORIENT ************************************************************ #}
 
     <div class="flex flex-col">
@@ -167,6 +166,24 @@ title: Have you been to the Mystery Park ?
         {% endbox_1 %}
     </div>
 
+    {# *********************************************************** CONTACT ************************************************************ #}
+
+    <div class="flex flex-col">
+        {# PAVILION 5 - CONTACT #}
+        {% box_1 "Pavilion 5 - Contact" %}
+        {% renderFile "src/have-you-been-to-the-mystery-park/Contact_Culture_shock_or_inspiration.md" %}
+        {% endbox_1 %}
+        {% box_1 "Brochures", "", "!text-[0.75rem]" %}
+        <a href="/_public/docs/mysterypark_contact_en.pdf" target="_blank">mysterypark_contact_en.pdf</a><br>
+        <a href="/_public/docs/mysterypark_contact_fr.pdf" target="_blank">mysterypark_contact_fr.pdf</a><br>
+        <a href="/_public/docs/mysterypark_contact_de.pdf" target="_blank">mysterypark_contact_de.pdf</a>
+        {% endbox_1 %}
+    </div>
+
+    {# ASIDE ABOUT GOLDEN INCA MINIATURE AIRCRAFTS #}
+    {% box_1 "Aside about antique airplanes" %}
+    {% renderFile "src/have-you-been-to-the-mystery-park/Aside_about_the_antique_airplanes.md" %}
+    {% endbox_1 %}
 </div>
 
 {# <img src="/_public/img/mysterypark_gif_2005.gif" alt="Random Mystery Park gif featured on their old website"> #}
