--- a/src/_includes/layout_contentPage.njk
+++ b/src/_includes/layout_contentPage.njk
@@ -32,7 +32,7 @@ title: Title
     </head>
 
     <body class="relative bg-black py-15 px-3 md:px-6 font-body text-white leading-[1.3]">
-        <div class="fixed top-0 left-0 w-full h-full bg-[url(/_public/img/background_stars.jpg)] bg-repeat bg-size-[300px]"></div>
+        <div class="fixed top-0 left-0 w-full h-full bg-[url(/_public/img/background_stars.jpg)] bg-repeat bg-size-[500px] brightness-[0.7] contrast-[1.15]"></div>
 
         <div class="relative max-w-[1400px] mx-auto">
 
