--- a/src/index.njk
+++ b/src/index.njk
@@ -26,7 +26,7 @@ title: Homepage
         <a href="/zines">zines/</a>
         {% endbox_1 %}
         {% box_1 %}
-        <a href="/pics">pics/</a>
+        <a href="/etiquettes">étiquettes/</a>
         {% endbox_1 %}
         {% box_1 %}
         <a href="/have-you-been-to-the-mystery-park">Have you been to the mystery park ?</a>
